# discordbot_c_plus_plus

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
